# rs-postgres

./: Cargo.toml  install.sh
.github/workflows/: rust.yml
src/: database.rs  llm.rs  main.rs
src/data/: mod.rs  structs.rs  translates.rs
src/frames/: mod.rs
