[package]
name = "rs-postgres"
version = "0.2.1"
edition = "2024"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders", "syntect"] }
egui-file-dialog = "0.9.0"

syntect = "5.2"

image = "0.25.5"

tokio = { version = "1.44.1", features = ["full"] }
dirs = "6.0.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_merge = "0.1.3"

sqlx = { version = "0.8.3", features = ["runtime-async-std", "postgres", "chrono", "json"] }
sqlx-postgres = "0.8.3"

log = "0.4.26"
simple_logger = "5.0.0"

chrono = "0.4.40"

indexmap = "2.8.0"

open = "5.3.2"

env_logger = "0.11.7"

ring = "0.17.14"
base64 = "0.22.1"
sha2 = "0.10.8"

csv = "1.3.1"

[package.metadata.winresource]
icon = ["assets/icon.png"]
